--- a/src/index.css
+++ b/src/index.css
@@ -351,3 +351,129 @@ movie
     padding-top: 0;
   }
 }
+/* styled for pagination */
+.pagination-buttons {
+  width: var(--smallWidth);
+  max-width: var(--fullWidth);
+  margin: 0 auto;
+  margin-top: -4.5rem;
+  padding-bottom: 2rem;
+}
+
+.pagination-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 0.1rem;
+}
+
+.page-btn,
+.prev-page-btn,
+.next-page-btn {
+  margin: 0.5rem;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+  background: transparent;
+  transition: var(--mainTransition);
+  font-size: 1.2rem;
+  color: var(--primaryColor);
+  border: none;
+}
+.page-btn:hover {
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+}
+.page-btn-current {
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+}
+
+.prev-page-btn,
+.next-page-btn {
+  border: none;
+  color: var(--primaryColor);
+  font-size: 1.75rem;
+  display: flex;
+  align-items: center;
+  transition: var(--mainTransition);
+}
+.prev-page-btn:hover,
+.next-page-btn:hover {
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+}
+
+/* end of styled for pagination */
+
+/* error page */
+.search-errors {
+  margin-top: 8rem;
+  font-size: 1.1rem;
+  padding: 0 2rem;
+}
+
+/* end of error page */
+
+/* filter section */
+.filters-section {
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: 25rem;
+  padding-top: 4rem;
+  margin-bottom: -4rem;
+}
+.filters-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+}
+.filters-form .form-control {
+  display: block;
+  margin-bottom: 0.6rem;
+}
+.filters-form label {
+  text-transform: capitalize;
+  margin-bottom: 0.25rem;
+}
+.filters-form input[type="text"] {
+  border: 0.5px solid var(--mainBlack);
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  background: transparent;
+  border-radius: var(--mainBorderRadius);
+}
+.filters-form select {
+  background: transparent;
+  font-size: 0.8rem;
+  border-color: var(--mainBlack);
+  border-width: 0.5px;
+}
+.filters-form input[type="checkbox"] {
+  margin-right: 0.5rem;
+}
+.price-group p {
+  margin-bottom: 0.6rem;
+  text-transform: capitalize;
+}
+.price-group label {
+  display: block;
+}
+.price-group input {
+  margin-right: 0.5rem;
+}
+.filters-section h6 {
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+.filters-section hr {
+  border: none;
+  border-top: 0.5px solid var(--mainBlack);
+}
+.search-errors {
+  margin-top: 8rem;
+  font-size: 1.1rem;
+  padding: 0 2rem;
+}
